// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonAdminModal INSTALL MODAL 1`] = `
<ModalV2
  closable={false}
  footer={
    <Button
      onClick={[MockFunction]}
    >
      Close
    </Button>
  }
  isCentered={true}
  onClose={[MockFunction]}
  title="Installing App Name"
  visible={true}
>
  <Content>
    <p>
      Your organisation settings prevent you from installing this app, please contact an Administrator.
    </p>
  </Content>
</ModalV2>
`;

exports[`NonAdminModal UNINSTALL MODAL 1`] = `
<ModalV2
  closable={false}
  footer={
    <Button
      onClick={[MockFunction]}
    >
      Close
    </Button>
  }
  isCentered={true}
  onClose={[MockFunction]}
  title="Uninstalling App Name"
  visible={true}
>
  <Content>
    <p>
      Your organisation settings prevent you from uninstalling this app, please contact an Administrator.
    </p>
  </Content>
</ModalV2>
`;
